plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.9.10'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'org.apache.commons:commons-lang3:3.6'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation "org.reflections:reflections:0.9.12"
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1' // Use the latest version
}

test {
    useJUnitPlatform()

    options {
        systemProperty 'java.system.properties', '--add-opens=java.base/java.time=ALL-UNNAMED'
    }
}
compileKotlin {
    kotlinOptions {
        jvmTarget = "17"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "17"
    }
}
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
